--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   web:
     build: .
-    command: python /code/manage.py runserver 0.0.0.0:8000
+    command: gunicorn django_project.wsgi -b 0.0.0.0:8000 # new
     volumes:
       - .:/code
     ports:
@@ -11,7 +11,7 @@ services:
     depends_on:
       - db
     environment:
-      - "DJANGO_SECRET_KEY=django-insecure-n#n*of!!ae6cuefo5ne-t=5y9-#jj$)c3=cea#a^jo26+v093_"
+      - "DJANGO_SECRET_KEY=QnyGkISOunhhNUks3QdXsLjT_Rxv8uFAblid4pgInk0JdoQ2ZFc"
       - "DJANGO_DEBUG=True"
       - "DJANGO_SECURE_SSL_REDIRECT=False" # new
   db:
