--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,14 @@ services:
     depends_on:
       - db
     environment:
-      - "DJANGO_SECRET_KEY=QnyGkISOunhhNUks3QdXsLjT_Rxv8uFAblid4pgInk0JdoQ2ZFc"
+      - "DJANGO_SECRET_KEY=django-insecure-n#n*of!!ae6cuefo5ne-t=5y9-#jj$)c3=cea#a^jo26+v093_"
       - "DJANGO_DEBUG=True"
       - "DJANGO_SECURE_SSL_REDIRECT=False" # new
+      - "DJANGO_SECURE_HSTS_SECONDS=0"  # new
+      - "DJANGO_SECURE_HSTS_INCLUDE_SUBDOMAINS=False"  # new
+      - "DJANGO_SECURE_HSTS_PRELOAD=False"  # new
+      - "DJANGO_SESSION_COOKIE_SECURE=False"  # new
+      - "DJANGO_CSRF_COOKIE_SECURE=False"  # new
   db:
     image: postgres:13
     volumes:
